# ArtiSync

./: .gitignore  CLAUDE.md  README.md  handoff.md  index.html
.github/workflows/: build-macos.yml  build.yml
c++ source code/: ArtiSync.iss  CMakeLists.txt  build.sh  flatpak_build.sh  fuzzy.h  http_client.cpp  main.cpp  metadata_writer.h  music_organizer.cpp  music_organizer.h  remux_engine.cpp  remux_engine.h  spotify_engine.h  types.h
c++ source code/flatpak/: com.artisync.ArtiSync.desktop  com.artisync.ArtiSync.metainfo.xml  com.artisync.ArtiSync.yml  com.musicmanager.MusicManager.desktop  com.musicmanager.MusicManager.metainfo.xml  com.musicmanager.MusicManager.yml
c++ source code/resources/: resources.qrc
c++ test/: CMakeLists.txt  base_engine.cpp  base_engine.h  build.sh  fuzzy.cpp  http_client.h  mb_engine.cpp  mb_engine.h  metadata_writer.cpp  music_organizer.cpp  music_organizer.h  spotify_engine.cpp
c++ test/resources/: resources.qrc
python/: mb_engine.py  music_config.json  music_organizer.py
python source code/: base_engine.py  metadata_writer.py  music_organizer.py  remux_engine.py  spotify_engine.py
